--- a/Jupyter/Finetuning/LLaMaDoc_Finetuning.ipynb
+++ b/Jupyter/Finetuning/LLaMaDoc_Finetuning.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7c1b0e24-cbdf-4cde-ac99-c1bb51c6f206",
+   "metadata": {},
+   "source": [
+    "Python Notebook for finetuning our model. Heavily inspired by the finetuning example presented in class (HPI, AI for Software Engineering, 14.05.2024). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7d5d597-3d86-4baa-865c-d3bd24a31e58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install transformers\n",
+    "#!pip install accelerate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "57a2ea83-1adc-43fa-ab6b-aa7c9c3fda19",
@@ -18,35 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8d9b65e4-443e-45ea-b3f2-691d95307087",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Gemma's activation function should be approximate GeLU and not exact GeLU.\n",
-      "Changing the activation function to `gelu_pytorch_tanh`.if you want to use the legacy `gelu_pytorch_tanh`, edit the `model.config` to set `hidden_activation=gelu_pytorch_tanh`   instead of `hidden_act`. See https://github.com/huggingface/transformers/pull/29402 for more details.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e5c235421024f40bb9b6c43e7852318",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Load the tokenizer and model\n",
     "gpu = torch.device('cuda:0')\n",
     "model_id = \"google/codegemma-1.1-2b\"\n",
     "tokenizer = GemmaTokenizer.from_pretrained(model_id)\n",
@@ -172,6 +167,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "60e179f7-ac79-474d-a758-212413003143",
+   "metadata": {},
+   "source": [
+    "Adjusted blocking in order to avoid splitting code examples in the middle. If an example does not fit into the current block, pad it with EOS-tokens and put the example into the next block. The block size 512 is larger than our longest example."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "90b4174a-7105-4d6d-aeb7-0e902a8406bb",
@@ -200,21 +203,7 @@
     "            current_block_capacity = block_size\n",
     "    while(len(blocked_ids[current_block]) < block_size):\n",
     "            blocked_ids[current_block].append(tokenizer.eos_token_id)\n",
-    "\n",
-    "    # concatenate all items\n",
-    "    #concatenated = sum(data['input_ids'], [])\n",
-    "    #length = len(concatenated)\n",
-    "           \n",
-    "    # shape \"n / block_size\" blocks\n",
-    "    #truncated_length = (length // block_size) * block_size\n",
-    "    #blocked_ids = [concatenated[i : i + block_size] for i in range(0, truncated_length, block_size)]\n",
-    "\n",
-    "    # add last block with padding\n",
-    "    #pad_length = block_size - (length % block_size)  # remaining tokens to fill\n",
-    "    #if pad_length != block_size:\n",
-    "    #    blocked_ids += [concatenated[truncated_length:] + [tokenizer.eos_token_id] * pad_length]\n",
-    "\n",
-    "    # format as transformers-friendly model input\n",
+    "        \n",
     "    assert len(blocked_ids) > 0\n",
     "    return {\n",
     "        'input_ids': blocked_ids,\n",
@@ -315,12 +304,12 @@
    "outputs": [],
    "source": [
     "peft_config = LoraConfig(\n",
-    "    task_type=TaskType.CAUSAL_LM,  # We want to predict the next token\n",
+    "    task_type=TaskType.CAUSAL_LM,\n",
     "    inference_mode=False,\n",
-    "    target_modules=['q_proj', 'v_proj'],   # this is specific to each model! Look up the exact names in the model\n",
-    "    r=8,  # rank\n",
-    "    lora_alpha=16,  # how strong does it override old values\n",
-    "    lora_dropout=0.05,  # to help with generalization, 5% of updates to the LoRA weights are discarded\n",
+    "    target_modules=['q_proj', 'v_proj'],\n",
+    "    r=8,\n",
+    "    lora_alpha=16,\n",
+    "    lora_dropout=0.05,\n",
     "    bias=\"all\"\n",
     ")"
    ]
@@ -332,7 +321,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This wraps our LLM into the adapter model\n",
     "peft_model = get_peft_model(model, peft_config)"
    ]
   },
@@ -351,7 +339,6 @@
     }
    ],
    "source": [
-    "# Check how many paramaters we need to train (should be orders of magnitude fewer)\n",
     "peft_model.print_trainable_parameters()"
    ]
   },
@@ -373,15 +360,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# some book-keeping to make sure any padding happens with <EOS> tokens (not all tokenizers are meant to be used in fine-tuning and don't always have this right)\n",
     "if tokenizer.pad_token_id is None:\n",
     "    tokenizer.pad_token_id = tokenizer.eos_token_id\n",
     "    tokenizer.pad_token = tokenizer.eos_token\n",
     "\n",
-    "# special collator that takes care of correctly offsetting our data (so that token n predicts n+1) \n",
     "collator = DataCollatorForLanguageModeling(\n",
     "            tokenizer,\n",
-    "            mlm=False,  # we could also \"mask\" random tokens to introduce some noise, but we don't need that here\n",
+    "            mlm=False,\n",
     "            pad_to_multiple_of=8,\n",
     "            return_tensors=\"pt\")"
    ]
@@ -406,9 +391,8 @@
    "source": [
     "lr = 3e-4\n",
     "\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=lr)  # The AdamW optimizer is well-suited for LLMs\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=lr)\n",
     "\n",
-    "# our schedule will decrease learning rate linearly with time\n",
     "lr_scheduler = get_linear_schedule_with_warmup(\n",
     "    optimizer=optimizer,\n",
     "    num_warmup_steps=0,\n",
@@ -421,30 +405,22 @@
    "execution_count": null,
    "id": "11be54d7-11b8-4816-b132-9afee7efa12e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 16%|█▌        | 274/1766 [10:17<56:07,  2.26s/it]  "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for epoch in range(num_epochs):\n",
-    "    model.train()  # set to training mode\n",
+    "    model.train()\n",
     "    total_loss = 0\n",
     "    \n",
     "    for step, batch in enumerate(tqdm(train_dataloader)):\n",
-    "        outputs = model(**batch.to(gpu))  # run batch through model\n",
+    "        outputs = model(**batch.to(gpu))\n",
     "        loss = outputs.loss\n",
     "        total_loss += loss.detach().cpu().float()\n",
-    "        loss.backward()      # propagate loss back\n",
-    "        optimizer.step()     # update weights\n",
-    "        lr_scheduler.step()  # update learning rate\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        lr_scheduler.step()\n",
     "        optimizer.zero_grad()\n",
     "\n",
-    "    model.eval()  # set to evaluation mode\n",
+    "    model.eval()\n",
     "    eval_loss = 0\n",
     "    for step, batch in enumerate(tqdm(eval_dataloader)):\n",
     "        with torch.no_grad():\n",
@@ -456,7 +432,7 @@
     "    train_epoch_loss = total_loss / len(train_dataloader)\n",
     "    print(f\"{epoch=}: {train_epoch_loss=} {eval_epoch_loss=}\")\n",
     "\n",
-    "    # save adapter to be loaded later\n",
+    "\n",
     "    peft_model.save_pretrained(f'./finetuning_checkpoints/checkpoint-ep{epoch}')"
    ]
   },
