comments and cleanup

--- a/github-scraper/scraping-analysis.ipynb
+++ b/github-scraper/scraping-analysis.ipynb
@@ -1,42 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting seaborn\n",
-      "  Downloading seaborn-0.13.2-py3-none-any.whl.metadata (5.4 kB)\n",
-      "Requirement already satisfied: numpy!=1.24.0,>=1.20 in /home/cr/Documents/hpi/out-of-date-docstrings/.venv/lib/python3.10/site-packages (from seaborn) (1.26.4)\n",
-      "Requirement already satisfied: pandas>=1.2 in /home/cr/Documents/hpi/out-of-date-docstrings/.venv/lib/python3.10/site-packages (from seaborn) (2.2.2)\n",
-      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in /home/cr/Documents/hpi/out-of-date-docstrings/.venv/lib/python3.10/site-packages (from seaborn) (3.9.1)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /home/cr/Documents/hpi/out-of-date-docstrings/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.2.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/cr/Documents/hpi/out-of-date-docstrings/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/cr/Documents/hpi/out-of-date-docstrings/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.53.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/cr/Documents/hpi/out-of-date-docstrings/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.5)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/cr/Documents/hpi/out-of-date-docstrings/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (24.1)\n",
-      "Requirement already satisfied: pillow>=8 in /home/cr/Documents/hpi/out-of-date-docstrings/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (10.3.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /home/cr/Documents/hpi/out-of-date-docstrings/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.1.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/cr/Documents/hpi/out-of-date-docstrings/.venv/lib/python3.10/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/cr/Documents/hpi/out-of-date-docstrings/.venv/lib/python3.10/site-packages (from pandas>=1.2->seaborn) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /home/cr/Documents/hpi/out-of-date-docstrings/.venv/lib/python3.10/site-packages (from pandas>=1.2->seaborn) (2024.1)\n",
-      "Requirement already satisfied: six>=1.5 in /home/cr/Documents/hpi/out-of-date-docstrings/.venv/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.16.0)\n",
-      "Downloading seaborn-0.13.2-py3-none-any.whl (294 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m294.9/294.9 kB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: seaborn\n",
-      "Successfully installed seaborn-0.13.2\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.1.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
    "source": [
-    "!pip install seaborn"
+    "This notebook takes the data from the data directory, performs some analysis and\n",
+    "creates plots to visualize the data. Next it takes a random sample and splits\n",
+    "the data into training and test data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install seaborn pandas mtplotlib numpy scikit-learn"
    ]
   },
   {
@@ -387,10 +366,7 @@
     "        df = pd.concat([df, pd.DataFrame(chunk, columns=columns)], ignore_index=True)\n",
     "\n",
     "    with open(DATA_PICKLE_PATH, \"wb\") as f:\n",
-    "        pickle.dump(df, f)\n",
-    "\n",
-    "print(df.shape)\n",
-    "df.head()"
+    "        pickle.dump(df, f)\n"
    ]
   },
   {
@@ -435,26 +411,6 @@
     "    \"code_similarity\": (code_similarity, \"code_similarities\"),\n",
     "    \"docstring_similarity\": (docstring_similarity, \"docstring_similarities\")\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "895"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(df.groupby(\"repo_name\"))"
    ]
   },
   {
@@ -722,11 +678,7 @@
     "    with open(TRAIN_PICKLE_PATH, \"wb\") as f:\n",
     "        pickle.dump(train_df, f)\n",
     "    with open(TEST_PICKLE_PATH, \"wb\") as f:\n",
-    "        pickle.dump(test_df, f)\n",
-    "\n",
-    "print(special_repos_df.shape)\n",
-    "print(train_df.shape)\n",
-    "print(test_df.shape)\n"
+    "        pickle.dump(test_df, f)\n"
    ]
   },
   {
